config/kube/service-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: lunch-spots-lb
spec:
  type: LoadBalancer
  selector:
    app: lunch-spots
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
